fixed x-overflow and added imags

--- a/style/style.scss
+++ b/style/style.scss
@@ -133,9 +133,6 @@ nav ul {
         text-align: left;
     }
 
-    td {
-    }
-
     .table--vertical {
         &-line {
             border-right: 1px solid black;
@@ -172,6 +169,9 @@ section {
     //background-color: rgb(34, 28, 65);
     // color: white;
 
+    img {
+        max-width: 100%;
+    }
 
     h3 {
         font-size: 1.8rem;
@@ -194,7 +194,7 @@ section {
 
 .studier {
     height: 100vh;
-    width: 100vw;
+    // width: 100vw;
 }
 
 .col {
@@ -204,13 +204,26 @@ section {
     flex-flow: row;
 }
 
-.col-textholder {
+.col-textholderwrapper {
     width: 50%;
-    margin: auto 5% auto 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // margin: auto;
+}
+
+.col-textholder {
+    width: 80%;
+    // margin: auto 5% auto 5%;
+    // display: flex;
+    // align-items: flex-start;
+    // justify-content: center;
+    // flex-direction: column;
 }
 
 .studier-bild {
-    width: 50vw;
+    width: 50%;
+    object-fit: fill;
 }
 
 .studier-header {
@@ -219,7 +232,7 @@ section {
 
 .studier-text {
     font-size: 1.1em;
-    word-break: break-all;
+    // word-break: break-all;
 }
 
 .larare {
@@ -231,7 +244,7 @@ section {
         
         div {
             margin: 1rem;
-            
+
             img {
                 max-width: 8vw;
             }
